[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/student_button.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 149.937, 11.0515 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Bord" type="ColorRect" parent="."]
margin_right = 250.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bord"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bord/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 45.0

[node name="left_button" type="Button" parent="Bord/MarginContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="right_button" type="Button" parent="Bord/MarginContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 240.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="Bord/MarginContainer"]
margin_left = 5.0
margin_top = 18.0
margin_right = 245.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Student 0001"
align = 1
valign = 1

[node name="Bord2" type="ColorRect" parent="."]
margin_left = 250.0
margin_right = 300.0
margin_bottom = 50.0
color = Color( 0.929412, 0.929412, 0.929412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bord2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -3.8147e-06
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="Bord2/MarginContainer"]
margin_left = 5.0
margin_top = 17.0
margin_right = 45.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
valign = 1

[node name="center_contact" type="Area2D" parent="."]

[node name="Shape2D_over" type="CollisionShape2D" parent="center_contact"]
position = Vector2( 150, 25 )
shape = SubResource( 1 )
[connection signal="gui_input" from="Bord/MarginContainer" to="." method="_on_object_gui_input"]
[connection signal="mouse_entered" from="Bord/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_mouse_entered"]
[connection signal="mouse_exited" from="Bord/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_mouse_exited"]
[connection signal="pressed" from="Bord/MarginContainer/HBoxContainer/left_button" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="Bord/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_mouse_entered"]
[connection signal="mouse_exited" from="Bord/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_mouse_exited"]
[connection signal="pressed" from="Bord/MarginContainer/HBoxContainer/right_button" to="." method="_on_right_button_pressed"]
[connection signal="gui_input" from="Bord2/MarginContainer" to="." method="_on_object_gui_input"]
[connection signal="area_entered" from="center_contact" to="." method="_on_center_contact_area_entered"]
[connection signal="area_exited" from="center_contact" to="." method="_on_center_contact_area_exited"]
